<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:inputType="numberDecimal"
        android:hint="Monthly savings"
        android:ems="10"
        android:id="@+id/monthlySavingsEditText" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="Yearly interest rate"
        android:id="@+id/interestEditText" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/monthlySavingsEditText" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:inputType="number"
        android:ems="10"
        android:hint="Your current age"
        android:id="@+id/ageEditText" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/interestEditText" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:inputType="number"
        android:ems="10"
        android:hint="Planned retirement age"
        android:id="@+id/retirementEditText" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ageEditText" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="Current savings"
        android:id="@+id/currentEditText" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/retirementEditText" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:text="Calculate retirement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/calculateButton" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/currentEditText" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:background="@color/colorAccent" android:textColor="#F8F7F7"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:id="@+id/resultTextView" android:layout_marginTop="8dp"
        android:textSize="25dp"
        android:text="Result"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>